--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1"
   },
-
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -38,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
